Added secret key masking

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asn1crypto==0.24.0
 astroid==2.1.0
 beautifulsoup4==4.6.0
 blinker==1.4
-Brlapi==0.6.6
+#Brlapi==0.6.6
 caffeine==2.9.5
 certifi==2018.1.18
 chardet==3.0.4
