--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,36 @@
 astroid==2.1.0
+boto==2.49.0
+certifi==2019.3.9
+chardet==3.0.4
+Click==7.0
 dj-database-url==0.5.0
 Django==2.1.7
+django-cors-headers==2.5.2
 django-heroku==0.3.1
 django-rest-framework==0.1.0
 djangorestframework==3.9.1
+dlib==19.17.0
+face-recognition==1.2.3
+face-recognition-models==0.3.0
+geographiclib==1.49
+geopy==1.19.0
 gunicorn==19.9.0
+idna==2.8
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
+numpy==1.16.3
+opencv-python==4.1.0.25
 Pillow==5.4.1
 psycopg2==2.7.7
+PyJWT==1.7.1
 pylint==2.2.2
+PySocks==1.6.8
 pytz==2018.9
+requests==2.21.0
 six==1.12.0
+twilio==6.24.0
 typed-ast==1.3.1
+urllib3==1.24.1
 whitenoise==4.1.2
 wrapt==1.11.1
-twilio==6.24.0
-django-cors-headers==2.5.2
-boto==2.49.0
-geopy==1.19.0
