--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 numpy==1.16.3
-opencv-python==4.1.0.25
+opencv-python-headless==4.1.0.25
 Pillow==5.4.1
 psycopg2==2.7.7
 PyJWT==1.7.1
